# OS

laba1/: CMakeLists.txt  build.cmd  build.sh
laba2/: CMakeLists.txt  build.cmd  build.sh
laba2/process_lib/: process.cpp  process.h
laba2/test_app/: main.cpp
laba3/: .gitignore  CMakeLists.txt  build.cmd  build.sh
laba3/include/: ipc.h  leader.h  mutex.h
laba3/src/: ipc_posix.cpp  ipc_windows.cpp  leader_posix.cpp  leader_windows.cpp  main.cpp  mutex_posix.cpp  mutex_windows.cpp
laba4/: CMakeLists.txt
laba4/device_simulator/: CMakeLists.txt  simulator.cpp
laba4/logger/: CMakeLists.txt  main.cpp
